--- a/app/src/main/res/layout/main_itemview.xml
+++ b/app/src/main/res/layout/main_itemview.xml
@@ -2,7 +2,7 @@
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
               android:orientation="horizontal"
               android:layout_width="match_parent"
-              android:layout_height="match_parent">
+              android:layout_height="200dp">
 
     <TextView android:layout_width="wrap_content"
               android:layout_height="wrap_content"
@@ -11,12 +11,12 @@
               android:layout_marginTop="10dp"
     />
     <ImageView
-            android:layout_width="200dp"
-            android:layout_height="200dp"
+            android:layout_width="50dp"
+            android:layout_height="50dp"
             android:src="@drawable/ic_launcher_background"
             android:layout_centerHorizontal="true"
             android:layout_alignTop="@+id/dataText"
-            android:layout_marginTop="100dp"
+            android:layout_marginTop="70dp"
             android:id="@+id/itemImage"
     />
 </RelativeLayout>
